@@ -6,7 +6,9 @@
 Changes from 1.4 series to development
 ======================================
 
-- None yet.
+- Fixed a problem that used to happen when running Numexpr with
+  threads in subprocesses.  It seems that threads needs to be
+  initialized whenever a subprocess is created.  Fixes #33.
 
 
 Changes from 1.3.1 to 1.4
